Reorganized files and began flask

--- a/resources/home.html
+++ b/resources/home.html
@@ -50,7 +50,7 @@
 
       <li class="">
 
-            <a href="/apply">APPLY</a>
+            <a href="https://forms.gle/PVCp1WBGUtAgcUH38">APPLY</a>
 
       </li>
 
@@ -92,7 +92,7 @@
 
     <li aria-haspopup="true" class="folder-collection folder"><a href="#" onClick="return false;">Analysts</a><span class="delimiter">/</span><div class="subnav"><ul><li class="page-collection"><a href="/analysts/overview">OVERVIEW</a></li><li class="page-collection"><a href="/analysts/application">APPLICATION PROCESS</a></li><li class="page-collection"><a href="/analysts/experience">ANALYST EXPERIENCE</a></li><li class="page-collection"><a href="/analysts/community">STRONG COMMUNITY</a></li><li class="page-collection"><a href="/analysts/faq">FAQ</a></li></ul></div></li>
 
-    <li class="page-collection"><a href="/apply">APPLY</a><span class="delimiter">/</span></li>
+    <li class="page-collection"><a href="https://forms.gle/PVCp1WBGUtAgcUH38">APPLY</a><span class="delimiter">/</span></li>
 
     <li class="page-collection"><a href="/consultforacauseresults19">Consult for a Cause</a><span class="delimiter">/</span></li>
 
@@ -113,7 +113,7 @@
 
       <img data-src="https://images.squarespace-cdn.com/content/v1/561ad760e4b0b66177b8f91d/1482266378298-M3MPDYZBGDPCB97LQIIF/ke17ZwdGBToddI8pDm48kFkoqUtq5oJ9erGJcyZUbKt7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0lCYWGxfdB_uf1_ERfebHZ6YKyB0tk73BEcw67Gppr_kifG4QHjIaZ9DPKuor8-2rg/3805687760_cae8f8e7dc_o.jpg" data-image="https://images.squarespace-cdn.com/content/v1/561ad760e4b0b66177b8f91d/1482266378298-M3MPDYZBGDPCB97LQIIF/ke17ZwdGBToddI8pDm48kFkoqUtq5oJ9erGJcyZUbKt7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z4YTzHvnKhyp6Da-NYroOW3ZGjoBKy3azqku80C789l0lCYWGxfdB_uf1_ERfebHZ6YKyB0tk73BEcw67Gppr_kifG4QHjIaZ9DPKuor8-2rg/3805687760_cae8f8e7dc_o.jpg" data-image-dimensions="2500x1863" data-image-focal-point="0.5,0.5" alt="3805687760_cae8f8e7dc_o.jpg"  class="custom-fallback-image" data-load="false" />
 
-  <iframe id="player" style="position: absolute; top: -131.562px; bottom: 0px; left: 0px; right: 0px; width: 1090px; height: 613.125px;" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/MXEAk0x1K0U?autohide=1&amp;autoplay=1&amp;controls=0&amp;enablejsapi=1&amp;iv_load_policy=3&amp;loop=0&amp;modestbranding=1&amp;playsinline=1&amp;rel=0&amp;showinfo=0&amp;wmode=opaque&amp;origin=https%3A%2F%2Fwww.harvardexulting.org&amp;widgetid=1" class="background-video ready"></iframe>
+  <iframe id="player" style="position: absolute; top: -131.562px; bottom: 0px; left: 0px; right: 0px; width: 1920px; height: 1080px;" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/MXEAk0x1K0U?&amp;autohide=1&amp;autoplay=1&amp;controls=0&amp;iv_load_policy=3&amp;loop=1&amp;modestbranding=1&amp;playsinline=1&amp;rel=0&amp;showinfo=0&amp;playlist=MXEAk0x1K0U" class="background-video ready"></iframe>
 
   </div>
                   </div>
@@ -156,7 +156,7 @@
 
     <li aria-haspopup="true" class="folder-collection folder"><a href="#" onClick="return false;">Analysts</a><span class="delimiter">/</span><div class="subnav"><ul><li class="page-collection"><a href="/analysts/overview">OVERVIEW</a></li><li class="page-collection"><a href="/analysts/application">APPLICATION PROCESS</a></li><li class="page-collection"><a href="/analysts/experience">ANALYST EXPERIENCE</a></li><li class="page-collection"><a href="/analysts/community">STRONG COMMUNITY</a></li><li class="page-collection"><a href="/analysts/faq">FAQ</a></li></ul></div></li>
 
-    <li class="page-collection"><a href="/apply">APPLY</a><span class="delimiter">/</span></li>
+    <li class="page-collection"><a href="https://forms.gle/PVCp1WBGUtAgcUH38">APPLY</a><span class="delimiter">/</span></li>
 
     <li class="page-collection"><a href="/consultforacauseresults19">Consult for a Cause</a><span class="delimiter">/</span></li>
 
